syntax = "proto3";

package account.auth.v1;

import "account/model/v1/user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/iput-kernel/foundation-account/internal/pb";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string session_id = 1;
  string access_token = 2;
  google.protobuf.Timestamp access_token_expires_at = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
  account.model.v1.User user = 6;
}
