syntax = "proto3";

package account.user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/iput-kernel/foundation-account/internal/pb";

message StatementRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message StatementResponse {
  repeated Statement statements = 1;
}

message Statement {
  string user_id = 2;
  string amount = 3;
  string type = 4;
  google.protobuf.Timestamp created_at = 5;
}
